:bento: update fonts

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,9 @@
 @import './reset.scss';
 
 body {
-    font-family: 'PT Sans', sans-serif;
-    font-weight: bold;
+    // font-family: 'Work Sans', sans-serif;
+    font-family: 'EB Garamond', sans-serif;
+
+    // font-weight: bold;
     // font-style: italic;
 }
