--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,20 +1,1 @@
-@font-face {
-    font-family: 'PT Sans', sans-serif;
-    src: url("./fonts/PTSans-Bold.ttf"), format("truetype");
-    font-weight: bold;
-}
-@font-face {
-    font-family: 'PT Sans', sans-serif;
-    src: url("./fonts/PTSans-BoldItalic.ttf"), format("truetype");
-    font-weight: bold;
-    font-style: italic;
-}
-@font-face {
-    font-family: 'PT Sans', sans-serif;
-    src: url("./fonts/PTSans-Regular.ttf"), format("truetype");
-}
-@font-face {
-    font-family: 'PT Sans', sans-serif;
-    src: url("./fonts/PTSans-Italic.ttf"), format("truetype");
-    font-style: italic;
-}
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Work+Sans:ital,wght@0,400;0,500;0,900;1,400&display=swap');
