:technologist::bento: code structure + font

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,10 @@
 @import './typography.scss';
 @import './reset.scss';
+@import './vars.scss';
 
-body {
-    // font-family: 'Work Sans', sans-serif;
-    font-family: 'EB Garamond', sans-serif;
-
-    // font-weight: bold;
-    // font-style: italic;
+html {
+    font-style: var(--font-default);
+    font-size: 16px;
+    color: var(--color_typo);
+    background-color: var(--color_background);
 }
