--- a/src/Components/Header/style.scss
+++ b/src/Components/Header/style.scss
@@ -1,4 +1,45 @@
 .header {
+    position: fixed;
     width: 100%;
-    background-color: tomato;
+    // background-color: tomato;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 300;
+    padding: 1rem var(--margin-header-desktop) 0;
+    z-index: 100;
+
+    &__nav {
+        display: flex;
+        font-weight: 600;
+
+        & > * {
+            position: relative;
+            cursor: pointer;
+
+            &:hover {
+                position: relative;
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    height: 2px;
+                    width: 100%;
+                    background-color: var(--color_typo);
+                    bottom: 0;
+                    left: 0;
+                }
+            }
+
+            & + * {
+                margin: 0 0 0 1rem;
+
+                &::before {
+                    content: '/';
+                    position: absolute;
+                    left: - .75rem;
+                    // margin: 0 .25rem;
+                }
+            }
+        }
+    }
 }
