--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Work+Sans:ital,wght@0,400;0,500;0,900;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,900;1,100;1,300;1,400;1,600&display=swap');
