--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -5,4 +5,6 @@
 
     --font_default: 'Work Sans', sans-serif;
     --font_secondary: 'EB Garamond', serif;
+
+    --margin-header-desktop: 2rem;
 }
