:sparkles: home > set up the pitch

--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -30,7 +30,13 @@
 .about {
 
     &__content {
-        height: 10rem;
-        background-color: bisque;
+        // height: 10rem;
+        // background-color: bisque;
+    }
+
+    &__pitch {
+        font-family: var(--font_default);
+        font-size: 3rem;
+        font-weight: 600;
     }
 }
