:lipstick: button > setup color and font-weight

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -9,7 +9,8 @@
     justify-self: center;
     border: none;
     border-radius: 50%;
-    background-color: darksalmon;
+    background-color: #ffd60a;
+    font-weight: 600;
     cursor: pointer;
     transition: width .3s ease-out, height .4s ease-out;
 
