--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -14,6 +14,9 @@
 
 .main {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 200vh;
     width: 100%;
     background-color: var(--color_background);
@@ -24,6 +27,7 @@
         display: grid;
         grid-template-columns: 1fr 3fr;
         width: 100%;
+        max-width: 1246px;
     }
 }
 
