--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -36,6 +36,8 @@
     &__content {
         // height: 10rem;
         // background-color: bisque;
+        padding-bottom: 2rem;
+        border-bottom: 1px solid var(--color_typo);
     }
 
     &__pitch {
