--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -62,7 +62,21 @@
 }
 
 .about {
+
+    &__content {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    img {
+        height: 450px;
+        width: 40%;
+        object-fit: cover;
+    }
+
     &__description {
+        margin-top: 2rem;
         font-family: var(--font_default);
         font-size: 1.5rem;
         line-height: 150%;
