--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -53,6 +53,7 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         justify-content: space-between;
+        gap: 1rem;
     }
     
     &__item {
@@ -79,6 +80,8 @@
         margin-top: 2rem;
         font-family: var(--font_default);
         font-size: 1.5rem;
-        line-height: 150%;
+        width: 80%;
+        align-self: flex-start;
+        // line-height: 150%;
     }
 }
