--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -27,8 +27,12 @@
         display: grid;
         grid-template-columns: 1fr 3fr;
         width: 100%;
-        margin-top: 2rem;
+        margin-top: 4rem;
         max-width: 1246px;
+    }
+
+    .title {
+        margin-top: 1rem;
     }
 }
 
@@ -37,7 +41,7 @@
     &__content {
         // height: 10rem;
         // background-color: bisque;
-        padding-bottom: 2rem;
+        padding-bottom: 4rem;
         border-bottom: 1px solid var(--color_typo);
     }
 
@@ -63,7 +67,6 @@
 }
 
 .about {
-
     &__content {
         display: flex;
         flex-direction: column;
