--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,36 @@
 footer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 14rem;
     width: 100%;
-    background-color: tomato;
+    overflow: hidden;
+    font-family: var(--font_default);
+
+    .contact {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        
+        &__socials {
+            display: flex;
+            gap: 1rem;
+            justify-self: center;
+        }
+
+        :last-child {
+            justify-self: end;
+        }
+    }
+
+    .location {
+        position: absolute;
+        bottom: -20%;
+        // transform: scaleY(2);
+        font-weight: 800;
+        white-space: nowrap;
+        font-size: 15vw;
+        // should use svg instead
+    }
 }
