--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -23,12 +23,15 @@
     z-index: 5;
     padding: 0 4rem;
 
+    section, footer {
+        max-width: 1246px;
+        margin-top: 4rem;
+    }
+
     section {
         display: grid;
         grid-template-columns: 1fr 3fr;
         width: 100%;
-        margin-top: 4rem;
-        max-width: 1246px;
     }
 
     .title {
