--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 10rem;
+    height: 8vw;
     width: 100%;
     overflow: hidden;
     font-family: var(--font_default);
