--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -17,11 +17,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 200vh;
+    // height: 200vh;
     width: 100%;
     background-color: var(--color_background);
     z-index: 5;
-    padding: 0 4rem;
+    padding: 0 4rem 1rem;
 
     section, footer {
         max-width: 1246px;
