--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 8vw;
+    height: 18vw;
     width: 100%;
     overflow: hidden;
     font-family: var(--font_default);
@@ -17,6 +17,10 @@ footer {
             display: flex;
             gap: 1rem;
             justify-self: center;
+
+            a {
+                color: var(--color_font);
+            }
         }
 
         :last-child {
