--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -18,7 +18,26 @@ footer {
             gap: 1rem;
 
             a {
+                position: relative;
                 color: var(--color_font);
+                padding-right: 1rem;
+
+                &::after {
+                    content: url('/arrow.svg');
+                    // content: '';
+                    position: absolute;
+                    top: 50%;
+                    right: 0;
+                    transform: translateY(-50%);
+                    display: block;
+                    width: .8rem;
+                    height: .8rem;
+                    transition: transform .3s ease-out;
+                }
+
+                &:hover::after {
+                    transform: translateY(-50%) rotate(45deg);
+                }
             }
         }
 
