:pencil2: edit default typo

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -3,7 +3,9 @@
     --color_background: #FFFFFF;
     --color_typo: #000000;
 
-    --font_default: 'Work Sans', sans-serif;
+    --font_default: 'ClashDisplay-Variable';
+
+    // --font_default: 'Work Sans', sans-serif;
     --font_secondary: 'EB Garamond', serif;
 
     --margin-header-desktop: 2rem;
