:bug: fix typo import ?

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,2 +1,11 @@
+@font-face {
+    font-family: 'ClashDisplay-Variable';
+    src: url('/fonts/ClashDisplay_Complete/Fonts/WEB/fonts/ClashDisplay-Variable.woff2') format('woff2'),
+         url('/fonts/ClashDisplay_Complete/Fonts/WEB/fonts/ClashDisplay-Variable.woff') format('woff'),
+         url('/fonts/ClashDisplay_Complete/Fonts/WEB/fonts/ClashDisplay-Variable.ttf') format('truetype');
+         font-weight: 200 700;
+         font-display: swap;
+         font-style: normal;
+}
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,900;1,100;1,300;1,400;1,600&display=swap');
-@import '/fonts/ClashDisplay_Complete/Fonts/WEB/css/clash-display.css'
+// @import '/fonts/ClashDisplay_Complete/Fonts/WEB/css/clash-display.css'
