:pencil2: update serif typo

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -7,5 +7,11 @@
          font-display: swap;
          font-style: normal;
 }
+@font-face {
+    font-family: 'FogtwoNo5';
+    src: url('/fonts/fogtwono5/FogtwoNo5.ttf') format('truetype');
+    font-display: swap;
+    font-style: normal;
+}
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Work+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,900;1,100;1,300;1,400;1,600&display=swap');
 // @import '/fonts/ClashDisplay_Complete/Fonts/WEB/css/clash-display.css'
