--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -6,7 +6,8 @@
     --font_default: 'ClashDisplay-Variable';
 
     // --font_default: 'Work Sans', sans-serif;
-    --font_secondary: 'EB Garamond', serif;
+    // --font_secondary: 'EB Garamond', serif;
+    --font_secondary: 'FogtwoNo5';
 
     --margin-header-desktop: 2rem;
 }
