--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -74,6 +74,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
+        gap: 2rem;
     }
 
     img {
@@ -83,7 +84,6 @@
     }
 
     &__description {
-        margin-top: 2rem;
         font-family: var(--font_default);
         font-size: 1.5rem;
         width: 80%;
