:bug: works > patch selection bug

--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -5,6 +5,7 @@
     height: 100vh;
     background-color: var(--color_background);
     padding: 5rem 0;
+    user-select: none;
 }
 
 .works__title {
