--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -21,45 +21,79 @@
         z-index: 10;
     }
 
+    &__blur {
+        position: absolute;
+        height: 88%;
+        width: 90%;
+        backdrop-filter: blur(2px);
+        z-index: 8;
+    }
+    
     &__background {
-        opacity: 0.4;
+        opacity: .4;
+        background-color: tomato;
     }
 
     &__project {
         position: absolute;
-        height: 10rem;
-        width: 10rem;
-        background-color: tomato;
+        height: 15rem;
+        width: 12rem;
+        will-change: transform;
+        
+        &:nth-child(2n) {
+            animation: project_in_x .8s ease-out;
+        }
+        
+        &:nth-child(2n + 1) {
+            animation: project_in_y .8s ease-out;
+        }
 
         &:nth-child(1) {
-            top: 10vh;
+            top: 6vh;
             left: 20vw;
             background-color: yellow;
         }
         &:nth-child(2) {
-            top: 40vh;
+            top: 36vh;
             left: 25vw;
             background-color: burlywood;
         }
         &:nth-child(3) {
-            top: 14vh;
+            top: 10vh;
             right: 18vw;
             background-color: thistle;
         }
         &:nth-child(4) {
-            top: 46vh;
+            top: 42vh;
             right: 8vw;
             background-color: teal;
         }
         &:nth-child(5) {
-            top: 63vh;
+            top: 59vh;
             left: 6vw;
             background-color: orange;
         }
         &:nth-child(6) {
-            top: 58vh;
+            top: 54vh;
             right: 34vw;
             background-color: lavender;
+        }
+    }
+
+    @keyframes project_in_y {
+        0% {
+            transform: scaleY(0);
+        }
+        100% {
+            transform: scaleY(1);
+        }
+    }
+    @keyframes project_in_x {
+        0% {
+            transform: scaleX(0);
+        }
+        100% {
+            transform: scaleX(1);
         }
     }
 }
