--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -25,7 +25,7 @@
         position: absolute;
         height: 88%;
         width: 90%;
-        backdrop-filter: blur(2px);
+        backdrop-filter: blur(3px);
         z-index: 8;
     }
     
@@ -105,7 +105,7 @@
     align-items: center;
     // height: 200vh;
     width: 100%;
-    background-color: var(--color_background);
+    // background-color: var(--color_background);
     z-index: 5;
     padding: 0 4rem 1rem;
 
