:lipstick: home > hero > change project size with vmin and make it responsive

--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -36,8 +36,8 @@
 
     &__project {
         position: absolute;
-        height: 15rem;
-        width: 12rem;
+        height: 15vmin;
+        width: 12vmin;
         will-change: transform;
 
         img {
