:lipstick: footer > responsive

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,6 +4,7 @@ footer {
     flex-direction: column;
     align-items: center;
     height: 18vw;
+    max-height: 240px;
     width: 100%;
     overflow: hidden;
     font-family: var(--font_default);
