--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -134,10 +134,24 @@
         border-bottom: 1px solid var(--color_typo);
     }
 
+    .cta {
+        @include large {
+            justify-self: left;
+        }
+    }
+
     &__pitch {
         font-family: var(--font_default);
         font-size: 3.5rem;
         font-weight: 600;
+
+        @include large {
+            font-size: 3rem;
+        }
+
+        @include medium {
+            font-size: 2.7rem;
+        }
     }
 }
 
