--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -181,6 +181,10 @@
         height: 450px;
         width: 40%;
         object-fit: cover;
+
+        @include large {
+            width: 60%;
+        }
     }
 
     &__description {
