--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,9 @@
+@mixin small {
+    @media (max-width: 615px) {
+        @content;
+    }
+}
+
 @mixin medium {
     @media (max-width: 789px) {
         @content;
@@ -6,6 +12,6 @@
 
 @mixin large {
     @media (max-width: 1084px) {
-      @content;
+        @content;
     }
-  }
+}
