--- a/src/routes/home/home.scss
+++ b/src/routes/home/home.scss
@@ -202,6 +202,10 @@
         @include large {
             width: 60%;
         }
+
+        @include small {
+            height: 240px
+        }
     }
 
     &__description {
