--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -6,6 +6,11 @@
     background-color: var(--color_background);
     padding: 5rem 0;
     user-select: none;
+
+    @include small {
+        display: grid;
+        grid-template-columns: 100%;
+    }
 }
 
 .works__title {
@@ -16,6 +21,11 @@
 .works__canvas {
     width: 100%;
     height: 80vh;
+    
+    @include small {
+        height: 50vh;
+        justify-self: center;
+    }
     canvas {
         touch-action: none;
     }
