--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -7,7 +7,7 @@
     padding: 5rem 0;
     user-select: none;
 
-    @include small {
+    @include medium {
         display: grid;
         grid-template-columns: 100%;
     }
@@ -22,9 +22,12 @@
     width: 100%;
     height: 80vh;
     
+    @include medium {
+        height: 60vh;
+        justify-self: center;
+    }
     @include small {
         height: 50vh;
-        justify-self: center;
     }
     canvas {
         touch-action: none;
