--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -3,7 +3,7 @@
 .works__hero {
     position: relative;
     height: 100vh;
-    background-color: var(--color_background);
+    background-color: var(--color_typo);
     padding: 5rem 0;
     user-select: none;
 
