--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -36,7 +36,7 @@
 }
 
 .works__cta {
-    position: absolute;
+    position: fixed;
     bottom: 4vh;
     left: 50%;
     transform: translateX(-50%);
