--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -7,7 +7,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
-    background-color: #000000;
+    background-color: #FFFFFF;
     z-index: 200;
 
 
