--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -3,6 +3,7 @@
 .works__hero {
     position: relative;
     height: 100vh;
+    height: -webkit-fill-available;
     background-color: var(--color_background);
     // background-color: var(--color_typo);
     padding: 5rem 0;
