--- a/src/routes/works/works.scss
+++ b/src/routes/works/works.scss
@@ -1,48 +1,48 @@
-@import './../../styles/global.scss';
+@import "./../../styles/global.scss";
 
 .works__hero {
-    position: relative;
-    height: 100vh;
-    height: -webkit-fill-available;
-    background-color: var(--color_background);
-    // background-color: var(--color_typo);
-    padding: 5rem 0;
-    user-select: none;
+	position: relative;
+	height: 100vh;
+	background-color: var(--color_background);
+	// background-color: var(--color_typo);
+	padding: 5rem 0;
+	user-select: none;
 
-    @include medium {
-        display: grid;
-        grid-template-columns: 100%;
-    }
+	@include medium {
+		height: -webkit-fill-available;
+		display: grid;
+		grid-template-columns: 100%;
+	}
 }
 
 .works__title {
-    font-weight: 600;
-    margin-left: 4rem;
-    @include small {
-        margin: 0 4rem;
-        min-height: 6rem;
-    }
+	font-weight: 600;
+	margin-left: 4rem;
+	@include small {
+		margin: 0 4rem;
+		min-height: 6rem;
+	}
 }
 
 .works__canvas {
-    width: 100%;
-    height: 80vh;
-    
-    @include medium {
-        height: 60vh;
-        justify-self: center;
-    }
-    @include small {
-        height: 50vh;
-    }
-    canvas {
-        touch-action: none;
-    }
+	width: 100%;
+	height: 70vh;
+
+	@include medium {
+		height: 60vh;
+		justify-self: center;
+	}
+	@include small {
+		height: 50vh;
+	}
+	canvas {
+		touch-action: none;
+	}
 }
 
 .works__cta {
-    position: fixed;
-    bottom: 4vh;
-    left: 50%;
-    transform: translateX(-50%);
+	position: fixed;
+	bottom: 4vh;
+	left: 50%;
+	transform: translateX(-50%);
 }
