--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -2,9 +2,28 @@
 	position: relative;
 	min-height: 100vh;
 	width: 100%;
-	background-color: var(--color-typo);
+	background-color: var(--color_main);
+	transform: translateY(100vh);
+	animation: intro_slide 0.6s ease-out forwards;
 
-	&-intro {
+	&__intro {
+		position: absolute;
+		top: 0;
+		left: 0;
 		height: 100vh;
+		width: 100%;
+		background-color: var(--color_typo);
+		transform: translateY(100vh);
+		animation: intro_slide 0.6s ease-out forwards 0.4s;
+	}
+}
+
+@keyframes intro_slide {
+	0% {
+		transform: translateY(100vh);
+	}
+
+	100% {
+		transform: translateY(0);
 	}
 }
