--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	min-height: 100vh;
 	width: 100%;
-	background-color: var(--color_main);
+	background-color: var(--color_typo);
 	transform: translateY(100vh);
 	animation: intro_slide 0.6s ease-out forwards;
 
@@ -12,9 +12,23 @@
 		left: 0;
 		height: 100vh;
 		width: 100%;
-		background-color: var(--color_typo);
+		background-color: var(--color_main);
 		transform: translateY(100vh);
-		animation: intro_slide 0.6s ease-out forwards 0.4s;
+		animation: intro_slide 0.6s ease-out forwards 0.3s;
+	}
+
+	&__content {
+		position: relative;
+		min-height: 100vh;
+		background-color: var(--color_background);
+		transform: translateY(100vh);
+		animation: intro_slide 0.6s ease-out forwards 0.6s;
+		z-index: 5;
+	}
+
+	&__md {
+		color: var(--color_main);
+		font-size: 4rem;
 	}
 }
 
