--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -1,7 +1,8 @@
 .project {
 	position: relative;
-	min-height: 100vh;
+	height: 100vh;
 	width: 100%;
+	overflow: hidden;
 	background-color: var(--color_typo);
 	transform: translateY(100vh);
 	animation: intro_slide 0.6s ease-out forwards;
@@ -19,11 +20,23 @@
 
 	&__content {
 		position: relative;
-		min-height: 100vh;
+		height: 100vh;
 		background-color: var(--color_background);
 		transform: translateY(100vh);
 		animation: intro_slide 0.6s ease-out forwards 0.6s;
+		overflow: scroll;
 		z-index: 5;
+	}
+
+	&__hero {
+		height: 60vh;
+		width: 100%;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
 	&__md {
