--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -20,6 +20,9 @@
 
 	&__content {
 		position: relative;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 		height: 100vh;
 		background-color: var(--color_background);
 		transform: translateY(100vh);
@@ -29,7 +32,7 @@
 	}
 
 	&__hero {
-		height: 60vh;
+		height: 45vh;
 		width: 100%;
 
 		img {
@@ -40,7 +43,43 @@
 	}
 
 	&__md {
-		font-size: 4rem;
+		--title-margin: 2.5rem;
+		max-width: 900px;
+		padding: 1rem 10%;
+		font-family: var(--font_default);
+		font-size: 1.4rem;
+		line-height: 150%;
+
+		h1 {
+			font-weight: 700;
+			font-size: 2.5rem;
+			margin: var(--title-margin) 0;
+		}
+		h2 {
+			font-weight: 600;
+			font-size: 2rem;
+			margin: calc(var(--title-margin) * 0.8) 0;
+		}
+		h3 {
+			font-weight: 500;
+			font-size: 1.8rem;
+			margin: calc(var(--title-margin) * 0.5) 0;
+		}
+
+		p {
+			margin-top: calc(var(--title-margin) * 0.3);
+		}
+
+		a {
+			color: var(--color_typo);
+			// background-color: var(--color_main);
+			text-decoration: underline;
+			transition: background-color 0.3s ease-out;
+
+			&:hover {
+				background-color: var(--color_main);
+			}
+		}
 	}
 }
 
