:lipstick: work > update links and add icons

--- a/src/styles/pages/work.scss
+++ b/src/styles/pages/work.scss
@@ -44,21 +44,38 @@
 	}
 
 	&__links {
-		max-width: 900px;
-		margin: 3rem 0 0;
+		position: fixed;
+		bottom: 2rem;
+		right: 2rem;
 		display: flex;
-		gap: 2rem;
+		flex-direction: column;
+		max-width: 900px;
+		gap: 1rem;
+		z-index: 50;
 	}
 
 	&__cta {
-		display: block;
-		width: 15rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 4rem;
+		height: 4rem;
 		padding: 1rem 0;
+		border-radius: 50%;
 		text-align: center;
-		background-color: var(--color_typo);
+		background-color: var(--color_main);
 		font-family: var(--font_default);
-		color: var(--color_background);
+		color: var(--color_typo);
 		font-weight: 500;
+		transition: transform 0.3s ease-out;
+
+		svg {
+			transform: scale(1.2);
+		}
+
+		&:hover {
+			transform: scale(1.1);
+		}
 	}
 
 	&__md {
